test/integration/bad/new/bad_multi_decl.stan
// TODO: would be nice to specialize for this mistake
model { real foo = 1 bar = 3; }
